rename method for id with source and introduce new for templates to get id without spaces

--- a/themes/bootstrap3/templates/RecordDriver/DefaultRecord/toolbar.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/DefaultRecord/toolbar.phtml
@@ -80,7 +80,7 @@
 
     <?php if ($this->cart()->isActive()): ?>
       <li>
-        <?=$this->render('record/cart-buttons.phtml', ['cartId' => $this->record($this->driver)->getUniqueIdWithSource()]); ?>
+        <?=$this->render('record/cart-buttons.phtml', ['cartId' => $this->record($this->driver)->getUniqueHtmlElementId()]); ?>
       </li>
     <?php endif; ?>
 
