--- a/themes/bootstrap3/templates/Recommend/SummonResults.phtml
+++ b/themes/bootstrap3/templates/Recommend/SummonResults.phtml
@@ -1,6 +1,6 @@
 <?php $searchObject = $this->recommend->getResults(); ?>
-<?php $results = $searchObject->getResults();
-if (!empty($results)): ?>
+<?php $results = $searchObject->getResults(); ?>
+<?php if (!empty($results)): ?>
   <h4><?=$this->transEsc('Summon Results')?></h4>
   <div class="list-group">
     <?php foreach ($results as $driver): ?>
