--- a/themes/bootstrap3/templates/RecordDriver/Pazpar2/result-list.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/Pazpar2/result-list.phtml
@@ -34,8 +34,10 @@
         <?php endforeach; ?>
       <?php endif; ?>
 
-      <?php $journalTitle = $this->driver->getContainerTitle(); ?>
-      <?php $summDate = $this->driver->getPublicationDates(); ?>
+      <?php
+        $journalTitle = $this->driver->getContainerTitle();
+        $summDate = $this->driver->getPublicationDates();
+      ?>
       <?php if (!empty($journalTitle)): ?>
         <?=!empty($summAuthor) ? '<br>' : ''?>
         <?=/* TODO: handle highlighting more elegantly here */ $this->transEsc('Published in') . ' <a href="' . $this->record($this->driver)->getLink('journaltitle', str_replace(['{{{{START_HILITE}}}}', '{{{{END_HILITE}}}}'], '', $journalTitle)) . '">' . $this->highlight($journalTitle) . '</a>';?>
