add context as prefix for id

--- a/themes/bootstrap3/templates/record/checkbox.phtml
+++ b/themes/bootstrap3/templates/record/checkbox.phtml
@@ -1,5 +1,5 @@
 <?php $label = isset($this->context) ? 'select_item_' . $this->context : 'select_item'; ?>
-<?php $describedById = $this->escapeHtmlAttr(($this->inLightbox ? 'modal-' : '') . $this->id); ?>
+<?php $describedById = $this->escapeHtmlAttr(($this->inLightbox ? 'modal-' : '') . ($this->context ? $this->context . '-' : '') . $this->id); ?>
 <label class="record-checkbox hidden-print">
   <input class="checkbox-select-item" type="checkbox" name="ids[]" value="<?=$this->escapeHtmlAttr($this->id) ?>"<?php if (isset($this->formAttr)): ?> form="<?=$this->formAttr ?>"<?php endif; ?> aria-describedby="<?=$describedById?>" aria-label="<?=$this->transEscAttr($label)?>">
   <span class="checkbox-icon"></span>
