--- a/themes/bootstrap3/templates/myresearch/storageretrievalrequests.phtml
+++ b/themes/bootstrap3/templates/myresearch/storageretrievalrequests.phtml
@@ -6,6 +6,7 @@
   $this->layout()->breadcrumbs = '<li><a href="' . $this->url('myresearch-home') . '">' . $this->transEsc('Your Account') . '</a></li> <li class="active">' . $this->transEsc('Storage Retrieval Requests') . '</li>';
 
   $this->headScript()->appendFile('requests.js');
+  $this->context = 'storage-retrieval-requests';
 ?>
 
 <a class="search-filter-toggle visible-xs" href="#myresearch-sidebar" data-toggle="offcanvas" title="<?=$this->transEsc('sidebar_expand')?>">
@@ -47,7 +48,7 @@
       <?php foreach ($this->recordList as $resource): ?>
         <?php $iteration++; ?>
         <?php $ilsDetails = $resource->getExtraDetail('ils_details'); ?>
-        <?php $describedById = ($this->inLightbox ? 'modal-' : '') . $this->record($record)->getUniqueHtmlElementId(); ?>
+        <?php $describedById = ($this->inLightbox ? 'modal-' : '') . ($this->context ? $this->context . '-' : '') . $this->record($record)->getUniqueHtmlElementId(); ?>
         <li id="record<?=$this->escapeHtmlAttr($resource->getUniqueId()) ?>" class="result">
           <?php if ($this->cancelForm && isset($ilsDetails['cancel_details'])): ?>
             <?php $safeId = preg_replace('/[^a-zA-Z0-9]/', '', $resource->getUniqueId()); ?>
