--- a/themes/bootstrap3/templates/RecordDriver/DefaultRecord/list-entry.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/DefaultRecord/list-entry.phtml
@@ -14,8 +14,7 @@
   $cover = $coverDetails['html'];
   $thumbnail = false;
   $thumbnailAlignment = $this->record($this->driver)->getThumbnailAlignment('list');
-  $this->context = 'list-entry';
-  $describedById = ($this->inLightbox ? 'modal-' : '') . $this->context . '-' . $this->record($this->driver)->getUniqueHtmlElementId();
+  $describedById = $this->record($this->driver)->getUniqueHtmlElementId();
 ?>
 <li class="result<?php if ($this->driver->supportsAjaxStatus()): ?> ajaxItem<?php endif ?>">
   <?php if ($cover):
