--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -543,12 +543,9 @@ table.search-history-table {
   table-layout: auto;
 
   tbody > tr > td { vertical-align: middle; }
-  th:first-child {
+  .history_time {
     width: 20%;
   }
-}
-.search-history-table .history_time {
-  width: 20%;
 }
 
 /* Break early to prevent table overflow */
