Replace include statements with render()

--- a/themes/bootstrap3/templates/libguidesaz/results.phtml
+++ b/themes/bootstrap3/templates/libguidesaz/results.phtml
@@ -1,2 +1,1 @@
-<?php
-    include $_SERVER['CONTEXT_DOCUMENT_ROOT'] . '/../themes/bootstrap3/templates/libguides/results.phtml';
+<?=$this->render('libguides/results.phtml');
