--- a/themes/bootstrap3/templates/libguidesaz/home.phtml
+++ b/themes/bootstrap3/templates/libguidesaz/home.phtml
@@ -1,2 +1,1 @@
-<?php
-    include $_SERVER['CONTEXT_DOCUMENT_ROOT'] . '/../themes/bootstrap3/templates/libguides/home.phtml';
+<?=$this->render('libguides/home.phtml');
