--- a/themes/bootstrap3/templates/layout/layout.phtml
+++ b/themes/bootstrap3/templates/layout/layout.phtml
@@ -107,6 +107,12 @@
     ?>
     <?=$this->cookieConsent()->render()?>
     <?=$this->headScript() ?>
+    <?php if(isset($lightboxParent)): ?>
+      <script> window.lightboxParent = "<?= $lightboxParent ?>"</script>
+    <?php endif; ?>
+    <?php if(isset($lightboxChild)): ?>
+      <script> window.lightboxChild = "<?= $lightboxChild ?>"</script>
+    <?php endif; ?>
   </head>
   <body class="template-dir-<?=$this->templateDir?> template-name-<?=$this->templateName?> <?=$this->layoutClass('offcanvas-row')?><?php if ($this->layout()->rtl): ?> rtl<?php endif; ?>">
     <?php // Set up the search box -- there are three possible cases:
