* moves changes out of Bootstrap vendor files * reverts vendor files to state prior to PR

--- a/themes/bootstrap3/less/mixins/dropdowns.less
+++ b/themes/bootstrap3/less/mixins/dropdowns.less
@@ -1,6 +1,8 @@
-// Dropdowns
+// Dropdowns Mixin
 
-// Dropdown link styles mixin, see also vendor/bootstrap/dropdowns.less
+// Mixin for dropdown link styles:
+// This mixin uses the styles from lines 65ff in vendor/bootstrap/dropdowns.less
+// to create a mixin that can easily be integrated in LESS _and_ SCSS
 
 .dropdown-menu-ul-links {
   display: block;
@@ -18,4 +20,3 @@
     background-color: @dropdown-link-hover-bg;
   }
 }
-
