fixed doubled quotation when using json_encode

--- a/themes/bootstrap3/templates/layout/layout.phtml
+++ b/themes/bootstrap3/templates/layout/layout.phtml
@@ -103,14 +103,14 @@
       if (!empty($lightboxParent)) {
         $lightboxParent = json_encode((string)$lightboxParent);
         $appendScripts[] = <<<JS
-                   VuFind.lightbox.parent = '{$lightboxParent}';
+                   VuFind.lightbox.parent = {$lightboxParent};
             JS;
       }
 
       if (!empty($lightboxChild)) {
         $lightboxChild = json_encode((string)$lightboxChild);
         $appendScripts[] = <<<JS
-                   VuFind.lightbox.child = '{$lightboxChild}';
+                   VuFind.lightbox.child = {$lightboxChild};
             JS;
       }
 
