--- a/themes/bootstrap3/scss/bootstrap.scss
+++ b/themes/bootstrap3/scss/bootstrap.scss
@@ -7,7 +7,7 @@ $fa-font-path: "../../bootstrap3/css/fonts";
 
 <#LESS */
 @import "variables";
-// Import custom (non-vendor) mixins1
+// Import custom (non-vendor) mixins
 @import "mixins/mixins";
 @import "vendor/font-awesome/font-awesome";
 
