--- a/themes/bootstrap3/less/mixins/dropdowns.less
+++ b/themes/bootstrap3/less/mixins/dropdowns.less
@@ -1,7 +1,7 @@
 // Dropdowns Mixin
 
 // Mixin for dropdown link styles:
-// This mixin uses the styles from lines 65ff in vendor/bootstrap/dropdowns.less
+// This mixin copies Bootstrap dropdowns styles for .dropdown-menu > li > a (vendor/bootstrap/dropdowns.less)
 // to create a mixin that can easily be integrated in LESS _and_ SCSS
 
 .dropdown-menu-ul-links {
