Run php-cs-fixer

--- a/themes/bootstrap3/templates/RecordDriver/EDS/result-list.phtml
+++ b/themes/bootstrap3/templates/RecordDriver/EDS/result-list.phtml
@@ -78,8 +78,9 @@
       </div>
 
       <?=$this->record($this->driver)->renderTemplate(
-        'result-list/full-text-links.phtml', 
-        ['recordLinker' => $recordLinker]); 
+                'result-list/full-text-links.phtml',
+                ['recordLinker' => $recordLinker]
+            );
       ?>
 
       <?php /* Links from DOI linker */ ?>
